# web-rag

./: docker-compose.yaml
backend/: chat.py  generate.py  loader.py  main.py  pyproject.toml  settings.py  vector_store.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
